# Prog2F

CPPswap/: swap.cpp  swap_test.cpp
ClonableHetero/: ClonableHetero.cbp  Makefile  README.md  bacterium.h  clonable.h  clonable_bacterium.h  clonable_hetero_store.hpp  clonable_hetero_test.cpp  clonable_testclass.h  testclass.h
CppBolt/: CppBolt.vcxproj  CppBolt.vcxproj.filters  boltMain.cpp  kassza.cpp  kifli.h  string5.cpp
CppBolt/doxygen/: string5.h
CppEllenallas/: resistor.h
CppEmber/: ember.h
CppHetero/: CppHetero.cbp  Makefile  README.md  bacterium.h  hetero_store.hpp  hetero_test.cpp  testclass.h
CppMonoton/: CppMonoton.cbp  Makefile  README.md  fancy_iterators.hpp  monoton.hpp  monoton_test.cpp
CppVektor/: vektor.cpp  vektor.h
Ellenorzo/CPPswap/: swap.h
PString/: pstring.cpp  pstring.h  pstring_test.cpp
UString/: ustring.cpp  ustring.h  ustring_test.cpp
lab_01/: README.TXT  fuggvenyeim.cpp  fuggvenyeim.h  nagyobb_main.cpp
lab_02/: const_h.cpp
lab_02/string1/: string1.c
lab_02/string2_cpp/: string2.cpp
lab_03/Komplex/: Makefile  elkeszult.h  komplex.cpp  komplex.h
lab_03/Teglalap/: teglalap.cpp
lab_04/: console.h  resistor.cpp  resistor_test2.cpp
lab_05/: CMakeLists.txt  string5_test.cpp
lab_06/bicikli/: bicikli.h
lab_07/Alakzatlab/: Makefile  alakzat.cbp  alakzat.cpp  alakzat.h  alakzat.vcproj  alakzat2_main.cpp  alakzat_main.cpp  alakzatlab.uxf  ellipszis.h  haromszog.cpp  haromszog.h  kor.cpp  kor.h  (+8 more)
lab_10/: Makefile  compat.hpp  gen_array_iter3.hpp  mystack.hpp  vektor.cbp  vektor.hpp  vektor.vcxproj  vektor_test.cpp
(+29 files in other folders)
